# askdocs

./: .gitignore
services/agent_service/: .env.example  pyproject.toml
services/agent_service/app/core/: config.py  logging.py
services/app_service/: .env.example  pyproject.toml
services/app_service/app/: main.py
services/app_service/app/api/routers/: health.py
services/app_service/app/core/: config.py  context.py  logging.py
services/retrieval_service/: .env.example  pyproject.toml
services/retrieval_service/app/: main.py
services/retrieval_service/app/api/routers/: retrieval.py
services/retrieval_service/app/core/: config.py  health.py
services/retrieval_service/app/embeddings/: base.py  bge.py
services/retrieval_service/app/ingestion/: chunker.py  cleaning.py  loader.py  models.py
services/retrieval_service/app/retrieval/: factory.py  fusion.py  hybrid.py
services/retrieval_service/app/schemas/: retrieval.py
services/retrieval_service/app/services/: retrieval_service.py
services/retrieval_service/app/store/: bm25_store.py  vector_store.py
services/retrieval_service/data/chroma/: chroma.sqlite3
services/retrieval_service/scripts/: ingest.py  inspect_chunks.py  search.py
