[project]
name = "retrieval-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.139.2",
    "langchain>=1.3.14",
    "langchain-text-splitters>=1.1.2",
    "pydantic-settings>=2.14.2",
    "pymupdf>=1.28.0",
    "pyyaml>=6.0.3",
    "sentence-transformers>=5.6.0",
    "uvicorn[standard]>=0.51.0",
]
